; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_intel_pm.c_icl_init_clock_gating.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_intel_pm.c_icl_init_clock_gating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i32 }

@GEN10_DFR_RATIO_EN_AND_CHICKEN = common dso_local global i32 0, align 4
@DFR_DISABLE = common dso_local global i32 0, align 4
@GEN9_CSFE_CHICKEN1_RCS = common dso_local global i32 0, align 4
@GEN11_ENABLE_32_PLANE_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_i915_private*)* @icl_init_clock_gating to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @icl_init_clock_gating(%struct.drm_i915_private* %0) #0 {
  %2 = alloca %struct.drm_i915_private*, align 8
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %2, align 8
  %3 = load i32, i32* @GEN10_DFR_RATIO_EN_AND_CHICKEN, align 4
  %4 = load i32, i32* @GEN10_DFR_RATIO_EN_AND_CHICKEN, align 4
  %5 = call i32 @I915_READ(i32 %4)
  %6 = load i32, i32* @DFR_DISABLE, align 4
  %7 = xor i32 %6, -1
  %8 = and i32 %5, %7
  %9 = call i32 @I915_WRITE(i32 %3, i32 %8)
  %10 = load i32, i32* @GEN9_CSFE_CHICKEN1_RCS, align 4
  %11 = load i32, i32* @GEN11_ENABLE_32_PLANE_MODE, align 4
  %12 = call i32 @_MASKED_BIT_ENABLE(i32 %11)
  %13 = call i32 @I915_WRITE(i32 %10, i32 %12)
  ret void
}

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @I915_READ(i32) #1

declare dso_local i32 @_MASKED_BIT_ENABLE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
